Refactor:Se refactorizo la logica de como funciona el juego