@@ -23,8 +23,9 @@ public class GameState {
     public String registerPlayer(int clientId, String playerName) {
         lock.writeLock().lock();
         try {
-            playersByClientId.put(clientId, required(playerName));
-            return playersByClientId.get(clientId);
+            String name = required(playerName);
+            playersByClientId.put(clientId, name);
+            return name;
         } finally {
             lock.writeLock().unlock();
         }
@@ -39,7 +40,7 @@ public class GameState {
                 throw new IllegalArgumentException("La sala ya existe: " + code);
             }
 
-            Room room = new Room(code);
+            Room room = new Room(code, clientId);
             room.players.add(clientId);
             roomsByCode.put(code, room);
             roomByClientId.put(clientId, code);
@@ -59,13 +60,112 @@ public class GameState {
                 throw new IllegalArgumentException("No existe la sala: " + code);
             }
             if (room.phase != RoomPhase.LOBBY) {
-                throw new IllegalStateException("La sala ya no esta en lobby");
+                throw new IllegalStateException("La sala ya esta en partida");
             }
 
-            leaveRoomInternal(clientId, false);
+            leaveRoomInternal(clientId, true);
             room.players.add(clientId);
             roomByClientId.put(clientId, code);
             return code;
+        } finally {
+            lock.writeLock().unlock();
+        }
+    }
+
+    public StartInfo startGame(int clientId, int minPlayers) {
+        lock.writeLock().lock();
+        try {
+            String roomCode = roomByClientId.get(clientId);
+            if (roomCode == null) {
+                throw new IllegalStateException("Debes unirte a una sala");
+            }
+            Room room = roomsByCode.get(roomCode);
+            if (room == null) {
+                throw new IllegalStateException("La sala ya no existe");
+            }
+            if (room.hostClientId != clientId) {
+                throw new IllegalStateException("Solo el host puede iniciar la partida");
+            }
+            if (room.phase != RoomPhase.LOBBY) {
+                throw new IllegalStateException("La sala no esta en lobby");
+            }
+            if (room.players.size() < minPlayers) {
+                throw new IllegalStateException("Se requieren al menos " + minPlayers + " jugadores");
+            }
+
+            room.phase = RoomPhase.IN_PROGRESS;
+            room.round = 1;
+            room.maxRounds = room.players.size();
+            room.roundSubmissions.clear();
+            room.storyByOwner.clear();
+            for (int owner : room.players) {
+                room.storyByOwner.put(owner, new ArrayList<>());
+            }
+            room.assignmentByAuthor = buildAssignment(room.players, room.round);
+
+            return new StartInfo(room.code, room.round, room.maxRounds, Map.copyOf(room.assignmentByAuthor));
+        } finally {
+            lock.writeLock().unlock();
+        }
+    }
+
+    public SubmissionResult submitFragment(int authorClientId, String rawText) {
+        lock.writeLock().lock();
+        try {
+            return submitFragmentInternal(authorClientId, rawText);
+        } finally {
+            lock.writeLock().unlock();
+        }
+    }
+
+    public SubmissionResult forceSubmit(int authorClientId, String fallbackText) {
+        lock.writeLock().lock();
+        try {
+            return submitFragmentInternal(authorClientId, fallbackText);
+        } finally {
+            lock.writeLock().unlock();
+        }
+    }
+
+    public Set<Integer> pendingAuthors(String roomCode) {
+        lock.readLock().lock();
+        try {
+            Room room = roomsByCode.get(roomCode);
+            if (room == null || room.phase != RoomPhase.IN_PROGRESS) {
+                return Set.of();
+            }
+            LinkedHashSet<Integer> pending = new LinkedHashSet<>(room.players);
+            pending.removeAll(room.roundSubmissions.keySet());
+            return Set.copyOf(pending);
+        } finally {
+            lock.readLock().unlock();
+        }
+    }
+
+    public RoomSnapshot roomSnapshot(String roomCode) {
+        lock.readLock().lock();
+        try {
+            Room room = roomsByCode.get(roomCode);
+            if (room == null) {
+                return null;
+            }
+            String hostName = playersByClientId.getOrDefault(room.hostClientId, "Host");
+            List<String> players = new ArrayList<>();
+            for (int id : room.players) {
+                players.add(playersByClientId.getOrDefault(id, "Jugador"));
+            }
+            return new RoomSnapshot(room.code, room.phase, hostName, players, room.round, room.maxRounds);
+        } finally {
+            lock.readLock().unlock();
+        }
+    }
+
+    public DisconnectInfo disconnect(int clientId) {
+        lock.writeLock().lock();
+        try {
+            String name = playersByClientId.remove(clientId);
+            String roomCode = leaveRoomInternal(clientId, true);
+            return new DisconnectInfo(clientId, name, roomCode);
         } finally {
             lock.writeLock().unlock();
         }
@@ -80,25 +180,10 @@ public class GameState {
         }
     }
 
-    public String disconnect(int clientId) {
-        lock.writeLock().lock();
-        try {
-            String roomCode = leaveRoomInternal(clientId, true);
-            playersByClientId.remove(clientId);
-            return roomCode;
-        } finally {
-            lock.writeLock().unlock();
-        }
-    }
-
-    public int roomSize(String roomCode) {
+    public String roomCodeByClient(int clientId) {
         lock.readLock().lock();
         try {
-            if (roomCode == null || roomCode.isBlank()) {
-                return 0;
-            }
-            Room room = roomsByCode.get(roomCode.toUpperCase());
-            return room == null ? 0 : room.players.size();
+            return roomByClientId.get(clientId);
         } finally {
             lock.readLock().unlock();
         }
@@ -113,10 +198,24 @@ public class GameState {
         }
     }
 
-    public String roomCodeByClient(int clientId) {
+    public int roomSize(String roomCode) {
         lock.readLock().lock();
         try {
-            return roomByClientId.get(clientId);
+            Room room = roomsByCode.get(roomCode);
+            return room == null ? 0 : room.players.size();
+        } finally {
+            lock.readLock().unlock();
+        }
+    }
+
+    public List<Integer> playersInRoomOrdered(String roomCode) {
+        lock.readLock().lock();
+        try {
+            Room room = roomsByCode.get(roomCode);
+            if (room == null) {
+                return List.of();
+            }
+            return List.copyOf(room.players);
         } finally {
             lock.readLock().unlock();
         }
@@ -135,14 +234,10 @@ public class GameState {
         }
     }
 
-    public List<Integer> playersInRoomOrdered(String roomCode) {
+    public Set<Integer> allClientIds() {
         lock.readLock().lock();
         try {
-            Room room = roomsByCode.get(roomCode);
-            if (room == null) {
-                return List.of();
-            }
-            return List.copyOf(room.players);
+            return Set.copyOf(playersByClientId.keySet());
         } finally {
             lock.readLock().unlock();
         }
@@ -169,7 +264,6 @@ public class GameState {
             if (entries == null || entries.isEmpty()) {
                 return "";
             }
-
             StringBuilder sb = new StringBuilder();
             for (RoundEntry entry : entries) {
                 if (!sb.isEmpty()) {
@@ -183,118 +277,90 @@ public class GameState {
         }
     }
 
-    public StartInfo tryStartRoom(String roomCode, int minPlayers) {
-        lock.writeLock().lock();
-        try {
-            Room room = roomsByCode.get(roomCode);
-            if (room == null || room.phase != RoomPhase.LOBBY || room.players.size() < minPlayers) {
-                return null;
-            }
-
-            room.phase = RoomPhase.IN_PROGRESS;
-            room.round = 1;
-            room.maxRounds = room.players.size();
-            room.currentRoundSubmissions.clear();
-
-            room.storyByOwner.clear();
-            for (int ownerId : room.players) {
-                room.storyByOwner.put(ownerId, new ArrayList<>());
-            }
-
-            Map<Integer, Integer> targets = assignmentByAuthor(room, room.round);
-            return new StartInfo(room.code, room.round, room.maxRounds, targets);
-        } finally {
-            lock.writeLock().unlock();
+    private SubmissionResult submitFragmentInternal(int authorClientId, String rawText) {
+        ensureIdentified(authorClientId);
+        String roomCode = roomByClientId.get(authorClientId);
+        if (roomCode == null) {
+            throw new IllegalStateException("Debes unirte a una sala");
         }
-    }
+        Room room = roomsByCode.get(roomCode);
+        if (room == null || room.phase != RoomPhase.IN_PROGRESS) {
+            throw new IllegalStateException("La partida no esta en progreso");
+        }
+        if (!room.players.contains(authorClientId)) {
+            throw new IllegalStateException("El jugador no pertenece a la sala");
+        }
+        if (room.roundSubmissions.containsKey(authorClientId)) {
+            throw new IllegalStateException("Ya enviaste tu fragmento en esta ronda");
+        }
 
-    public SubmissionResult submitRoundText(int authorClientId, String text) {
-        lock.writeLock().lock();
-        try {
-            ensureIdentified(authorClientId);
-            String roomCode = roomByClientId.get(authorClientId);
-            if (roomCode == null) {
-                throw new IllegalStateException("Debes unirte a una sala antes de enviar texto");
-            }
+        String text = required(rawText);
+        int round = room.round;
+        int ownerClientId = room.assignmentByAuthor.getOrDefault(authorClientId, authorClientId);
 
-            Room room = roomsByCode.get(roomCode);
-            if (room == null) {
-                throw new IllegalStateException("La sala ya no existe");
-            }
-            if (room.phase != RoomPhase.IN_PROGRESS) {
-                throw new IllegalStateException("La partida no esta en progreso");
-            }
-            if (room.currentRoundSubmissions.containsKey(authorClientId)) {
-                throw new IllegalStateException("Ya enviaste tu texto en esta ronda");
-            }
+        room.roundSubmissions.put(authorClientId, text);
+        room.storyByOwner.computeIfAbsent(ownerClientId, ignored -> new ArrayList<>())
+                .add(new RoundEntry(round, authorClientId, text));
 
-            String clean = required(text);
-            int submittedRound = room.round;
-            room.currentRoundSubmissions.put(authorClientId, clean);
+        int submitted = room.roundSubmissions.size();
+        int total = room.players.size();
+        boolean roundCompleted = submitted >= total;
 
-            int ownerClientId = targetOwner(room, authorClientId, submittedRound);
-            room.storyByOwner.computeIfAbsent(ownerClientId, ignored -> new ArrayList<>())
-                    .add(new RoundEntry(submittedRound, authorClientId, clean));
-
-            int submitted = room.currentRoundSubmissions.size();
-            int total = room.players.size();
-            boolean roundCompleted = submitted >= total;
-
-            if (!roundCompleted) {
-                return new SubmissionResult(
-                        room.code,
-                        submittedRound,
-                        room.round,
-                        room.maxRounds,
-                        submitted,
-                        total,
-                        false,
-                        false,
-                        ownerClientId,
-                        Map.of(),
-                        Map.of()
-                );
-            }
-
-            room.currentRoundSubmissions.clear();
-            if (room.round >= room.maxRounds) {
-                room.phase = RoomPhase.FINISHED;
-                return new SubmissionResult(
-                        room.code,
-                        submittedRound,
-                        room.round,
-                        room.maxRounds,
-                        submitted,
-                        total,
-                        true,
-                        true,
-                        ownerClientId,
-                        Map.of(),
-                        buildStorySummary(room)
-                );
-            }
-
-            room.round++;
-            Map<Integer, Integer> nextTargets = assignmentByAuthor(room, room.round);
+        if (!roundCompleted) {
             return new SubmissionResult(
                     room.code,
-                    submittedRound,
+                    round,
+                    room.round,
+                    room.maxRounds,
+                    submitted,
+                    total,
+                    false,
+                    false,
+                    ownerClientId,
+                    Map.of(),
+                    Map.of(),
+                    text
+            );
+        }
+
+        room.roundSubmissions.clear();
+        if (room.round >= room.maxRounds) {
+            room.phase = RoomPhase.FINISHED;
+            return new SubmissionResult(
+                    room.code,
+                    round,
                     room.round,
                     room.maxRounds,
                     submitted,
                     total,
                     true,
-                    false,
+                    true,
                     ownerClientId,
-                    nextTargets,
-                    Map.of()
+                    Map.of(),
+                    buildStorySummary(room),
+                    text
             );
-        } finally {
-            lock.writeLock().unlock();
         }
+
+        room.round++;
+        room.assignmentByAuthor = buildAssignment(room.players, room.round);
+        return new SubmissionResult(
+                room.code,
+                round,
+                room.round,
+                room.maxRounds,
+                submitted,
+                total,
+                true,
+                false,
+                ownerClientId,
+                Map.copyOf(room.assignmentByAuthor),
+                Map.of(),
+                text
+        );
     }
 
-    private String leaveRoomInternal(int clientId, boolean allowInProgress) {
+    private String leaveRoomInternal(int clientId, boolean force) {
         String roomCode = roomByClientId.remove(clientId);
         if (roomCode == null) {
             return null;
@@ -305,14 +371,16 @@ public class GameState {
             return roomCode;
         }
 
-        if (!allowInProgress && room.phase == RoomPhase.IN_PROGRESS) {
+        if (!force && room.phase == RoomPhase.IN_PROGRESS) {
             roomByClientId.put(clientId, roomCode);
-            throw new IllegalStateException("No puedes salir de una sala con partida en progreso");
+            throw new IllegalStateException("No puedes salir durante una partida");
         }
 
         room.players.remove(clientId);
-        room.currentRoundSubmissions.remove(clientId);
-        room.storyByOwner.remove(clientId);
+        room.roundSubmissions.remove(clientId);
+        if (room.hostClientId == clientId && !room.players.isEmpty()) {
+            room.hostClientId = room.players.iterator().next();
+        }
 
         if (room.players.isEmpty()) {
             roomsByCode.remove(roomCode);
@@ -320,58 +388,49 @@ public class GameState {
         return roomCode;
     }
 
-    private Map<Integer, Integer> assignmentByAuthor(Room room, int round) {
-        List<Integer> ordered = new ArrayList<>(room.players);
-        Map<Integer, Integer> targets = new LinkedHashMap<>();
-        for (int authorId : ordered) {
-            targets.put(authorId, targetOwner(room, authorId, round));
-        }
-        return targets;
-    }
-
-    private int targetOwner(Room room, int authorId, int round) {
-        List<Integer> ordered = new ArrayList<>(room.players);
+    private Map<Integer, Integer> buildAssignment(Set<Integer> orderedPlayers, int round) {
+        List<Integer> ordered = new ArrayList<>(orderedPlayers);
         int n = ordered.size();
-        int authorIndex = ordered.indexOf(authorId);
-        if (authorIndex < 0 || n == 0) {
-            throw new IllegalStateException("Autor no pertenece a la sala");
+        Map<Integer, Integer> assignment = new LinkedHashMap<>();
+        for (int i = 0; i < n; i++) {
+            int author = ordered.get(i);
+            int ownerIndex = Math.floorMod(i - (round - 1), n);
+            assignment.put(author, ordered.get(ownerIndex));
         }
-
-        int ownerIndex = Math.floorMod(authorIndex - (round - 1), n);
-        return ordered.get(ownerIndex);
+        return assignment;
     }
 
     private Map<Integer, String> buildStorySummary(Room room) {
         Map<Integer, String> out = new LinkedHashMap<>();
-        for (Map.Entry<Integer, List<RoundEntry>> e : room.storyByOwner.entrySet()) {
-            StringBuilder sb = new StringBuilder();
-            for (RoundEntry entry : e.getValue()) {
-                if (!sb.isEmpty()) {
-                    sb.append(" | ");
-                }
-                String authorName = playersByClientId.getOrDefault(entry.authorClientId(), "?");
-                sb.append("R").append(entry.round()).append("(").append(authorName).append("): ").append(entry.text());
+        for (Map.Entry<Integer, List<RoundEntry>> entry : room.storyByOwner.entrySet()) {
+            String ownerName = playersByClientId.getOrDefault(entry.getKey(), "Jugador");
+            StringBuilder sb = new StringBuilder("Historia de ").append(ownerName).append(':');
+            for (RoundEntry roundEntry : entry.getValue()) {
+                String authorName = playersByClientId.getOrDefault(roundEntry.authorClientId(), "?");
+                sb.append("\nR").append(roundEntry.round())
+                        .append(" (").append(authorName).append("): ")
+                        .append(roundEntry.text());
             }
-            out.put(e.getKey(), sb.toString());
+            out.put(entry.getKey(), sb.toString());
         }
         return out;
     }
 
     private void ensureIdentified(int clientId) {
         if (!playersByClientId.containsKey(clientId)) {
-            throw new IllegalStateException("Debes identificarte antes con HELLO");
+            throw new IllegalStateException("Debes identificarte primero con HELLO");
         }
     }
 
     private String required(String value) {
-        if (value == null || value.trim().isEmpty()) {
+        if (value == null || value.isBlank()) {
             throw new IllegalArgumentException("Valor requerido vacio");
         }
         return value.trim();
     }
 
-    private String normalizeRoomCode(String value) {
-        return required(value).toUpperCase();
+    private String normalizeRoomCode(String roomCode) {
+        return required(roomCode).toUpperCase();
     }
 
     public record StartInfo(String roomCode, int round, int maxRounds, Map<Integer, Integer> ownerByAuthor) {
@@ -388,8 +447,22 @@ public class GameState {
             boolean gameFinished,
             int targetOwnerClientId,
             Map<Integer, Integer> nextOwnerByAuthor,
-            Map<Integer, String> finalStoryByOwner
+            Map<Integer, String> finalStoryByOwner,
+            String submittedText
     ) {
+    }
+
+    public record RoomSnapshot(
+            String roomCode,
+            RoomPhase phase,
+            String hostName,
+            List<String> players,
+            int round,
+            int maxRounds
+    ) {
+    }
+
+    public record DisconnectInfo(int clientId, String playerName, String roomCode) {
     }
 
     public record RoundEntry(int round, int authorClientId, String text) {
@@ -397,15 +470,18 @@ public class GameState {
 
     private static final class Room {
         private final String code;
+        private int hostClientId;
         private final LinkedHashSet<Integer> players = new LinkedHashSet<>();
-        private final Map<Integer, String> currentRoundSubmissions = new LinkedHashMap<>();
+        private final Map<Integer, String> roundSubmissions = new LinkedHashMap<>();
         private final Map<Integer, List<RoundEntry>> storyByOwner = new LinkedHashMap<>();
+        private Map<Integer, Integer> assignmentByAuthor = new LinkedHashMap<>();
         private RoomPhase phase = RoomPhase.LOBBY;
         private int round;
         private int maxRounds;
 
-        private Room(String code) {
+        private Room(String code, int hostClientId) {
             this.code = code;
+            this.hostClientId = hostClientId;
         }
     }
 }
